server/static/sass/index_page.scss
@import 'base';
@import 'sign_in';

$header-height: 668px;

#landing-header {
  width: 100%;
  position: absolute;
  top: 0;
  height: $header-height;
  overflow: hidden;
  padding: 0;
  background-color: white;
  //@include box-shadow(0 3px 9px -2px rgba(0, 0, 0, 0.5));
  min-width: 700px;

  .header-bg {
    opacity: 0;
    @include background(url(/static/img/slc-header-lens.jpg));
    position: absolute;
    width: 2452px;
    height: $header-height;
    top: 0;
    right: 0;
    background-repeat: no-repeat;
    -webkit-transition: opacity 800ms cubic-bezier(0.51, 0.01, 0.37, 0.98);
    -webkit-transition-delay: 100ms;
    -moz-transition: opacity 800ms cubic-bezier(0.51, 0.01, 0.37, 0.98) 100ms;
    -o-transition: opacity 800ms cubic-bezier(0.51, 0.01, 0.37, 0.98) 100ms;
    transition: opacity 800ms cubic-bezier(0.51, 0.01, 0.37, 0.98) 100ms;
    @include transform(translate3d(0, 0, 0));
  }

  .sign-up-box {
    z-index: 10;
    top: 150px;
    position: absolute;
    top: 200px;
    padding: 20px 40px;
    padding-bottom: 25px;
    right: 0;
    width: 620px;
    opacity: 0;
    color: #333;

    .welcome {
      font-size: 40px;
    }

    .tagline {
      color: #222;
    }

    .sign-up-content {
      @include transform(translate3d(50px, 0, 0));
    }

    &.animated {
      opacity: 1;
      z-index: 3;
      background: rgba(255, 255, 255, 0.65);
      @include transition(all 800ms cubic-bezier(0.51, 0.01, 0.37, 0.98));

      .sign-up-content {
        @include transform(translate3d(0, 0, 0));
        @include transition(all 800ms cubic-bezier(0.51, 0.01, 0.37, 0.98));
      }
    }
  }

}

body {
  @include background(none);
}


footer {
  $footer-text-color: #CCC;
  $footer-hover-color: #999;

  // TODO(david): Don't hardcode nav bar height
  margin-top: $header-height - 54px;
  height: auto;
  text-align: center;
  padding-top: 20px;

  .fade-to-footer {
    $gradient-height: 80px;
    position: absolute;
    top: $header-height - $gradient-height;
    height: $gradient-height;
    display: block;
    width: 100%;
    @include background(linear-gradient(top, rgba(255, 255, 255, 0.0), rgba(255, 255, 255, 1.0)));
  }

  .footer-text {
    position: relative;

    color: $footer-text-color;
    padding-top: 20px;
    padding-bottom: 20px;
    font-size: 14px;
    @include transition(all 0.2s ease-out);

    &:hover {
      @include transition(all 0.2s ease-out);
      color: $footer-hover-color;
      a {
        color: $footer-hover-color;
        @include transition(all 0.2s ease-out);
      }
    }

    a {
      color: $footer-text-color;
      @include transition(all 0.2s ease-out);
      &:hover {
        @include transition(all 0.2s ease-out);
        color: $flowBlue;
        text-decoration: none;
      }
    }

    ul {
      list-style: none;
      li {
        list-style-image: none;
        list-style-type: none;
        display: inline-block;
        border-right: 1px solid $footer-text-color;
        padding-right: 10px;
        margin-right: 10px;

        text-transform: uppercase;
        letter-spacing: 3px;

        &:last-child {
          margin-right: 0;
          padding-right: 0;
          border-right: none;
        }
      }
    }

    p {
      font-weight: lighter;
    }

    // TODO(mack): might want to move out of the footer since using position:absolute
    // to attach the logo to the bottom right corner is only possible because there's
    // no position:relative on the footer
    .mixpanel-logo {
      position: absolute;
      top: 40px;
      right: 10px;
      opacity: 0.4;
    }
  }
}

